--- a/package.json
+++ b/package.json
@@ -1,27 +1,42 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.41",
-    "autoprefixer": "^10.4.4",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
-    "postcss": "^8.4.12",
-    "sass": "^1.49.9",
-    "tailwindcss": "^3.0.23",
-    "typescript": "4.6.2"
-  }
+	"name": "portfolio",
+	"version": "0.1.0",
+	"private": true,
+	"browser": {
+		"crypto": false,
+		"fs": false,
+		"path": false,
+		"os": false,
+		"net": false,
+		"stream": false,
+		"tls": false
+	},
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"gray-matter": "^4.0.3",
+		"next": "12.1.0",
+		"node-polyfill-webpack-plugin": "^1.1.4",
+		"path": "^0.12.7",
+		"path-browserify": "^1.0.1",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"remark": "^14.0.2",
+		"remark-html": "^15.0.1"
+	},
+	"devDependencies": {
+		"@types/node": "17.0.21",
+		"@types/react": "17.0.41",
+		"autoprefixer": "^10.4.4",
+		"eslint": "8.11.0",
+		"eslint-config-next": "12.1.0",
+		"postcss": "^8.4.12",
+		"sass": "^1.49.9",
+		"tailwindcss": "^3.0.23",
+		"typescript": "4.6.2"
+	}
 }
