--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"framer-motion": "^6.2.8",
 		"gray-matter": "^4.0.3",
 		"next": "12.1.0",
 		"node-polyfill-webpack-plugin": "^1.1.4",
