Projects: add section, modal, Homepage: general restructurization

--- a/.forestry/front_matter/templates/project.yml
+++ b/.forestry/front_matter/templates/project.yml
@@ -7,6 +7,11 @@ fields:
   config:
     required: false
   label: Title
+- name: github
+  type: text
+  config:
+    required: false
+  label: Github
 - name: desc
   type: textarea
   default: ''
