--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"remark": "^14.0.2",
-		"remark-html": "^15.0.1"
+		"remark-html": "^15.0.1",
+		"swiper": "^8.0.7"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.21",
