--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"path-browserify": "^1.0.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-intersection-observer": "^8.33.1",
 		"remark": "^14.0.2",
 		"remark-html": "^15.0.1",
 		"swiper": "^8.0.7"
