--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
 	},
 	"dependencies": {
 		"@types/draft-js": "^0.11.9",
+		"dayjs": "^1.11.7",
 		"framer-motion": "^6.2.8",
+		"graphql": "^16.6.0",
+		"graphql-request": "^5.2.0",
 		"gray-matter": "^4.0.3",
 		"html-react-parser": "^1.4.9",
 		"next": "12.1.0",
